# hosting-service/internal/dto/root.go
@@ -1,0 +1,7 @@
+package dto
+
+type EntryPointLink struct {
+	Rel       string
+	Href      string
+	Templated bool
+}
