# hosting-service/internal/handlers/root.go
@@ -1,7 +1,11 @@
 package handlers
 
 import (
+	"encoding/json"
+	"hosting-service/internal/assemblers"
+	"hosting-service/internal/dto"
 	"hosting-service/internal/service"
+	"net/http"
 )
 
 type ApiHandler struct {
@@ -14,4 +18,29 @@ func NewApiHandler(planService service.PlanService, serverService service.Server
 		PlanHandler:    NewPlansHandler(planService),
 		ServersHandler: NewServersHandler(serverService),
 	}
+}
+
+func RootEntryPoint(w http.ResponseWriter, r *http.Request) {
+	var routes []dto.EntryPointLink
+
+	routes = append(routes,
+		dto.EntryPointLink{
+			Rel:       "plans",
+			Href:      "/api/plans{?page,pageSize}",
+			Templated: true,
+		},
+		dto.EntryPointLink{
+			Rel:       "servers",
+			Href:      "/api/servers{?page,pageSize}",
+			Templated: true,
+		},
+		dto.EntryPointLink{
+			Rel:  "documentation",
+			Href: "/swagger/index.html",
+		},
+	)
+
+	w.Header().Set("Content-Type", "application/hal+json")
+	w.WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(assemblers.ToRouteCollectionResponse(routes))
 }
